--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "apidoc": "apidoc -i src/server/routes -o doc/",
     "test": "node scripts/client/test.js --env=jsdom",
     "flow": "flow",
-    "tsc": "tsc"
+    "tsc": "tsc",
+    "tslint": "tslint --project"
   },
   "dependencies": {
     "ajv": "^5.5.2",
@@ -64,6 +65,7 @@
     "style-loader": "0.18.2",
     "styled-components": "^2.2.3",
     "sw-precache-webpack-plugin": "0.11.4",
+    "tslint": "^5.16.0",
     "typescript": "^3.4.1",
     "url-loader": "0.5.9",
     "webpack": "3.5.1",
@@ -113,12 +115,20 @@
     "extends": "react-app"
   },
   "devDependencies": {
+    "@types/debug": "^4.1.4",
+    "@types/jsonwebtoken": "^8.3.2",
     "@types/koa": "^2.0.48",
     "@types/koa-bodyparser": "^4.2.2",
+    "@types/koa-json": "^2.0.18",
+    "@types/koa-logger": "^3.1.1",
     "@types/koa-passport": "^4.0.2",
     "@types/koa-router": "^7.0.40",
     "@types/koa-static": "^4.0.1",
+    "@types/koa-views": "^2.0.3",
+    "@types/mongoose": "^5.3.24",
     "@types/node": "^11.12.2",
+    "@types/passport-jwt": "^3.0.1",
+    "@types/passport-local": "^1.0.33",
     "css-entry-webpack-plugin": "^1.0.0-beta.4",
     "css-hot-loader": "^1.3.0",
     "css-loader": "0.14.5",
@@ -130,6 +140,8 @@
     "nodemon": "^1.12.1",
     "style-loader": "^0.13.0",
     "svg-sprite-loader": "^3.0.5",
+    "tslint-config-standard": "^8.0.1",
+    "typescript-tslint-plugin": "^0.3.1",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.2.1"
   }
