--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,6 @@
     "esModuleInterop": true,
     "experimentalDecorators": true,
     "outDir": "./build",
-    // "allowJs": true,
     "lib": ["es2015"]
   },
   "include": [
@@ -15,5 +14,5 @@
   "exclude": [
     "node_modules"
   ],
-  "compileOnSave": false
+  "compileOnSave": true,
 }
