--- a/package.json
+++ b/package.json
@@ -3,11 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "npm run clientStart && npm run serverStart",
-    "serverStart": "node index.js",
+    "serverStart": "node  build/src/server/index.js",
     "serverStart:dev": "nodemon --harmony build/src/server/index.js & tsc --watch",
-    "clientStart": "NODE_ENV='development' webpack-dev-server --watch --hot --inline",
-    "build": "NODE_ENV='production' webpack",
+    "clientStart": "webpack-dev-server --mode development --hot --progress --color --port 3000",
+    "build": "webpack --mode production",
     "apidoc": "apidoc -i src/server/routes -o doc/",
     "test": "node scripts/client/test.js --env=jsdom",
     "flow": "flow",
@@ -15,6 +14,7 @@
     "tslint": "tslint --project"
   },
   "dependencies": {
+    "@material-ui/core": "^4.0.0",
     "ajv": "^5.5.2",
     "autoprefixer": "7.1.2",
     "babel-core": "6.25.0",
@@ -33,9 +33,10 @@
     "eslint-plugin-flowtype": "2.35.0",
     "extract-text-webpack-plugin": "3.0.0",
     "file-loader": "0.11.2",
+    "final-form": "^4.13.1",
+    "final-form-material-ui": "^0.3.0",
     "flow-bin": "^0.57.3",
     "fs-extra": "3.0.1",
-    "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
     "jsonwebtoken": "^8.1.0",
     "koa": "^2.3.0",
@@ -55,10 +56,11 @@
     "postcss-loader": "2.0.6",
     "promise": "8.0.1",
     "pug": "^2.0.0-rc.4",
-    "react": "^16.0.0",
+    "react": "^16.8.6",
     "react-dev-utils": "^4.1.0",
-    "react-dom": "^16.0.0",
-    "react-redux": "^5.0.6",
+    "react-dom": "^16.8.6",
+    "react-final-form": "^6.0.1",
+    "react-redux": "^5.1.1",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "style-loader": "0.18.2",
@@ -67,8 +69,6 @@
     "tslint": "^5.16.0",
     "typescript": "^3.4.1",
     "url-loader": "0.5.9",
-    "webpack": "3.5.1",
-    "webpack-dev-server": "2.8.2",
     "webpack-manifest-plugin": "1.2.1",
     "whatwg-fetch": "2.0.3"
   },
@@ -128,6 +128,10 @@
     "@types/node": "^11.12.2",
     "@types/passport-jwt": "^3.0.1",
     "@types/passport-local": "^1.0.33",
+    "@types/react": "^16.8.19",
+    "@types/react-dom": "^16.8.4",
+    "@types/superagent": "^4.1.1",
+    "awesome-typescript-loader": "^5.2.1",
     "css-entry-webpack-plugin": "^1.0.0-beta.4",
     "css-hot-loader": "^1.3.0",
     "css-loader": "0.14.5",
@@ -136,12 +140,18 @@
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.4.0",
+    "html-webpack-plugin": "^4.0.0-beta.5",
     "nodemon": "^1.12.1",
+    "source-map-loader": "^0.2.4",
     "style-loader": "^0.13.0",
+    "superagent": "^5.0.6",
     "svg-sprite-loader": "^3.0.5",
+    "tapable": "^1.0.0-beta.5",
     "tslint-config-standard": "^8.0.1",
+    "tslint-react": "^4.0.0",
     "typescript-tslint-plugin": "^0.3.1",
-    "webpack": "^2.2.1",
-    "webpack-dev-server": "^2.2.1"
+    "webpack": "^4.32.2",
+    "webpack-cli": "^3.3.2",
+    "webpack-dev-server": "^3.1.14"
   }
 }
